[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/MainMenu/OptionsButtonDown.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/MainMenu/StartButtonDown.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/MainMenu/QuitButtonUp.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/MainMenu/StartButtonUp.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/MainMenu/QuitButtonDown.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/MainMenu/OptionsButtonUp.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainMenu/MenuContainer.gd" type="Script" id=7]

[node name="MenuContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 7 )

[node name="StartContainer" type="HBoxContainer" parent="."]
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 280.0
alignment = 1

[node name="StartButton" type="TextureButton" parent="StartContainer"]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
stretch_mode = 2

[node name="OptionsContainer" type="HBoxContainer" parent="."]
margin_top = 284.0
margin_right = 1024.0
margin_bottom = 316.0
alignment = 1

[node name="OptionsButton" type="TextureButton" parent="OptionsContainer"]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 32.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 1 )
stretch_mode = 2

[node name="QuitContainer" type="HBoxContainer" parent="."]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 352.0
alignment = 1

[node name="QuitButton" type="TextureButton" parent="QuitContainer"]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
stretch_mode = 2

[connection signal="pressed" from="StartContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="QuitContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
